# fgt-SDK

./: .gitmodules  LICENSE  README.md  linux-udev.sh
.github/ISSUE_TEMPLATE/: bug_report.md
C#/: README.md  fgt_sdk_csharp.sln
C#/Examples/Advanced Custom Sensor Regulation/: Advanced Custom Sensor Regulation.csproj  Program.cs
C#/Examples/Advanced Features/: Advanced Features.csproj  Program.cs
C#/Examples/Advanced Parallel Pressure Control/: Advanced Parallel Pressure Control.csproj  Program.cs
C#/Examples/Advanced Specific Multiple Instruments/: Advanced Specific Multiple Instruments.csproj  Program.cs
C#/Examples/Basic Get Instruments Info/: Program.cs
C#/Examples/Basic Read Sensor Data/: Basic Read Sensor Data.csproj  Program.cs
C#/Examples/Basic Sensor Regulation/: Program.cs
C#/Examples/Basic Set Pressure/: Basic Set Pressure.csproj  Program.cs
C#/Examples/Basic Set Valve Position/: Basic Set Valve Position.csproj  Program.cs
C#/UnitTests/: TestLowLevel.cs  UnitTests.csproj
C#/UnitTests/Properties/: AssemblyInfo.cs
C#/fgt_sdk_csharp/: fgtSdk.cs  fgt_sdk.csproj  fgt_sdk.nuspec  fgt_sdk.targets  fgt_sdk.xml
C#/fgt_sdk_csharp/Enums/: fgt_ERRCHECK_TYPE.cs  fgt_ERROR_CODE.cs  fgt_ERROR_REPORT_MODE.cs  fgt_INSTRUMENT_TYPE.cs  fgt_POWER.cs  fgt_SENSOR_CALIBRATION.cs  fgt_SENSOR_TYPE.cs  fgt_SWITCH_DIRECTION.cs  fgt_TTL_MODE.cs  fgt_VALVE_TYPE.cs
C#/fgt_sdk_csharp/Structs/: fgt_CHANNEL_INFO.cs  fgt_CONTROLLER_INFO.cs
C++/: .gitignore  CMakeLists.txt  README.md  fgt_SDK.h  fgt_SDK_Cpp.cpp  fgt_SDK_Cpp.h  fgt_SDK_Cpp.sln  fgt_SDK_Cpp.vcxproj  fgt_SDK_Cpp.vcxproj.filters
C++/Advanced Custom Sensor Regulation/: Advanced Custom Sensor Regulation.cpp  Advanced Custom Sensor Regulation.vcxproj  Advanced Custom Sensor Regulation.vcxproj.filters
C++/Advanced Features/: Advanced Features.cpp  Advanced Features.vcxproj  Advanced Features.vcxproj.filters
C++/Advanced Parallel Pressure Control/: Advanced Parallel Pressure Control.cpp  Advanced Parallel Pressure Control.vcxproj  Advanced Parallel Pressure Control.vcxproj.filters
C++/Advanced Specific Multiple Instruments/: Advanced Specific Multiple Instruments.cpp  Advanced Specific Multiple Instruments.vcxproj  Advanced Specific Multiple Instruments.vcxproj.filters
C++/Basic Get Instruments Info/: Basic Get Instruments Info.cpp  Basic Get Instruments Info.vcxproj  Basic Get Instruments Info.vcxproj.filters
C++/Basic Read Sensor Data/: Basic Read Sensor Data.cpp  Basic Read Sensor Data.vcxproj  Basic Read Sensor Data.vcxproj.filters
C++/Basic Sensor Regulation/: Basic Sensor Regulation.cpp  Basic Sensor Regulation.vcxproj  Basic Sensor Regulation.vcxproj.filters
C++/Basic Set Pressure/: Basic Set Pressure.cpp  Basic Set Pressure.vcxproj  Basic Set Pressure.vcxproj.filters
C++/Basic Set Regulation/: Basic Sensor Regulation.cpp  Basic Set Regulation.vcxproj
C++/Examples/: CMakeLists.txt
C++/Examples/Advanced Custom Sensor Regulation/: Advanced Custom Sensor Regulation.cpp  CMakeLists.txt
C++/Examples/Advanced Features/: Advanced Features.cpp  CMakeLists.txt
C++/Examples/Advanced Parallel Pressure Control/: Advanced Parallel Pressure Control.cpp  CMakeLists.txt
C++/Examples/Advanced Specific Multiple Instruments/: Advanced Specific Multiple Instruments.cpp  CMakeLists.txt
C++/Examples/Basic Get Instruments Info/: Basic Get Instruments Info.cpp  CMakeLists.txt
C++/Examples/Basic Read Sensor Data/: Basic Read Sensor Data.cpp  CMakeLists.txt
C++/Examples/Basic Sensor Regulation/: Basic Sensor Regulation.cpp  CMakeLists.txt
C++/Examples/Basic Set Pressure/: Basic Set Pressure.cpp  CMakeLists.txt
C++/Examples/Basic Set Valve Position/: Basic Set Valve Position.cpp  CMakeLists.txt
C++/fgt_SDK_Cpp/: CMakeLists.txt  fgt_SDK_Cpp.cpp  fgt_SDK_Cpp.h
C++/fgt_SDK_Cpp/dlls/: fgt_SDK.h
C++/fgt_SDK_Cpp/dlls/mac/x64/: libfgt_SDK.dylib
C++/fgt_SDK_Cpp/dlls/windows/x64/: fgt_SDK.lib
C++/fgt_SDK_Cpp/dlls/windows/x86/: fgt_SDK.lib
LabVIEW/: .gitignore
LabVIEW/dlls/: fgt_SDK.h
LabVIEW/sourceCode/: dir.mnu  fgt-SDK.lvproj  fgt_SDK.lvlib
LabVIEW/sourceCode/Examples/: Advanced Custom Sensor Regulation.vi  Advanced Features.vi  Advanced Parallel Pressure Control.vi  Advanced Specific Multiple Instruments.vi  Basic Get Instruments Info.vi  Basic Read Sensor Data.vi  Basic Sensor Regulation.vi  Basic Set Pressure.vi  Basic Set Regulation.vi  Basic Set Valve Position.vi  FluigentSDK.bin3
LabVIEW/sourceCode/TypeDefs/: fgt_CHANNEL_INFO.ctl  fgt_CHANNEL_TYPE.ctl  fgt_CONTROLLER_INFO.ctl  fgt_ERROR_CODE.ctl  fgt_INFO_CODE.ctl  fgt_INSTRUMENT_TYPE.ctl  fgt_POWER.ctl  fgt_PRESSURE_UNIT.ctl  fgt_SCALE.ctl  fgt_SENSOR_CALIBRATION.ctl  fgt_SENSOR_TYPE.ctl  fgt_SENSOR_UNIT.ctl  fgt_STATUS_INFO.ctl  fgt_SWITCH_DIRECTION.ctl  fgt_TTL_INFO.ctl  fgt_TTL_MODE.ctl  fgt_VALVE_TYPE.ctl
LabVIEW/sourceCode/VIs/: dir.mnu
LabVIEW/sourceCode/subvi/: Error Converter (ErrCode or Status).vi  ErrorCodeToErrorInfo.vi  ErrorCodeToErrorStringConverter.vi  Remove padding.vi
MATLAB/Toolbox/: info.xml
MATLAB/Toolbox/examples/: Fluigent_SDK_AdvancedCustomSensorRegulation.m  Fluigent_SDK_AdvancedFeatures.m  Fluigent_SDK_AdvancedSpecificMultipleInstruments.m  Fluigent_SDK_BasicGetInstrumentsInfo.m  Fluigent_SDK_BasicReadSensorData.m  Fluigent_SDK_BasicSensorRegulation.m  Fluigent_SDK_BasicSetPressure.m  Fluigent_SDK_BasicSetValvePosition.m
MATLAB/Toolbox/html/: Examples.html  FluigentSDK.html  Fluigent_SDK_AdvancedCustomSensorRegulation.html  Fluigent_SDK_AdvancedFeatures.html  helptoc.xml  (+7 more)
Python/examples/: AdvancedCustomSensorRegulation.py  AdvancedFeatures.py  AdvancedParallelPressureControl.py  AdvancedSpecificMultipleInstruments.py  BasicGetInstrumentsInfo.py  BasicReadSensorData.py  BasicSensorRegulation.py  BasicSetPressure.py  BasicSetValvePosition.py
Shared/: fgt_SDK.h
Shared/Windows/: fgt_SDK.h
(+218 files in other folders)
