add_subdirectory(Advanced\ Custom\ Sensor\ Regulation)
add_subdirectory(Advanced\ Features)
add_subdirectory(Advanced\ Parallel\ Pressure\ Control)
add_subdirectory(Advanced\ Specific\ Multiple\ Instruments)
add_subdirectory(Basic\ Get\ Instruments\ Info)
add_subdirectory(Basic\ Read\ Sensor\ Data)
add_subdirectory(Basic\ Sensor\ Regulation)
add_subdirectory(Basic\ Set\ Pressure)
add_subdirectory(Basic\ Set\ Valve\ Position)